kafka-connect/02-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: kafka-connect-ingress
  namespace: kafka-connect
spec:
  rules:
  - host: kafkaconnectintegracao.blabla.com
    http:
      paths:
      - backend:
          serviceName: kafka-connect-service 
          servicePort: 80
        path: /
status:
  loadBalancer:
    ingress:
    - hostname: internal-loadbalance_url
